--- a/p8105_hw2_maf2311.md
+++ b/p8105_hw2_maf2311.md
@@ -5,33 +5,93 @@ Octobr 4 2022
 
 # Problem 1
 
-``` r
-nyc_subway = read_csv(file = "./NYC_Transit_Subway_Entrance_And_Exit_Data.csv") %>% 
-  janitor::clean_names() %>% 
-  select(
-    line, station_name, station_latitude, station_longitude, starts_with("route"), entry, exit_only,   
-    vending, entrance_type, ada
-  ) %>% 
-  mutate(entry = ifelse(entry == "YES", TRUE, FALSE))
-```
-
-    ## Rows: 1868 Columns: 32
-    ## ── Column specification ────────────────────────────────────────────────────────
-    ## Delimiter: ","
-    ## chr (22): Division, Line, Station Name, Route1, Route2, Route3, Route4, Rout...
-    ## dbl  (8): Station Latitude, Station Longitude, Route8, Route9, Route10, Rout...
-    ## lgl  (2): ADA, Free Crossover
-    ## 
-    ## ℹ Use `spec()` to retrieve the full column specification for this data.
-    ## ℹ Specify the column types or set `show_col_types = FALSE` to quiet this message.
-
 NYC Transit Entry/Exit Dataset Description:
 
--   The NYC Transit Entry/Exit Dataset dataset has the following
-    variables: line, station_name, station_latitude, station_longitude,
-    route1, route2, route3, route4, route5, route6, route7, route8,
-    route9, route10, route11, entry, exit_only, vending, entrance_type,
-    ada.
--   To clean the data,
--   The NYC Transit Entry/Exit Dataset dataset has 1868 rows and 20
-    columns.
+The NYC Transit Entry/Exit Dataset has the following variables: line,
+station_name, station_latitude, station_longitude, route1, route2,
+route3, route4, route5, route6, route7, route8, route9, route10,
+route11, entry, exit_only, vending, entrance_type, ada. To clean the
+data, I first imported the csv file, made the names more uniform with
+the janitor package, and only kept the variables of interest. The binary
+variable ‘entry’ was changed to a logical variable using the mutate
+function. The NYC Transit Entry/Exit Dataset dataset has 1868 rows and
+20 columns. These data are tidier than when I first imported the
+dataset, however we can update the variable names (specifically the
+route variables) to make them more user friendly.
+
+``` r
+stn = 
+  nyc_subway %>% 
+  select(line, station_name) %>% 
+  distinct
+
+compliant = 
+  nyc_subway %>% 
+  filter(ada == TRUE) %>%
+  select(line, station_name) %>% 
+  distinct
+
+ent=
+  nyc_subway %>% 
+  filter(vending == "NO") %>% 
+  pull(entry) %>% 
+  mean
+```
+
+-   There are 465 distinct stations.
+-   There are 84 stations that are ADA compliant.
+-   The proportion f station entrances/exits without vending that allow
+    entrance is 0.3770492.
+
+# Problem 2
+
+``` r
+mrTrashWheel = 
+  read_excel("./Trash Wheel Collection Data.xlsx", sheet = "Mr. Trash Wheel", skip = 1, n_max = 547) %>%
+  janitor::clean_names() %>%
+  select(-x15, -x16) %>%
+  mutate(sports_balls = round(sports_balls, digits = 0)) %>%
+  mutate(sports_balls = as.integer(sports_balls)) %>%
+  mutate(mrORprof = 1)
+```
+
+    ## New names:
+    ## • `` -> `...15`
+    ## • `` -> `...16`
+
+``` r
+profTrashWheel = 
+  read_excel("./Trash Wheel Collection Data.xlsx", sheet = "Professor Trash Wheel", skip = 1, n_max = 94) %>%
+  janitor::clean_names() %>%
+  mutate(mrORprof = 2)
+
+trashwheel = 
+  merge(mrTrashWheel, profTrashWheel, all = TRUE)
+```
+
+The Trashwheel Dataset has the following variables: dumpster, month,
+year, date, weight_tons, volume_cubic_yards, plastic_bottles,
+polystyrene, cigarette_butts, glass_bottles, grocery_bags, chip_bags,
+homes_powered, mrORprof, sports_balls. There are 641 observations. The
+variable ‘mrORprof’ distinguishes between Mr. Trash Wheel (1) and
+Professor Trash Wheel (2).
+
+``` r
+filtered2 = 
+  trashwheel %>%
+  filter(mrORprof == 2)
+weight = sum(filtered2$weight_tons)
+
+filtered1 = 
+  trashwheel %>%
+  filter(mrORprof == 1 & year == "2020")
+balls = sum(filtered1$sports_balls)
+```
+
+The total weight of trash collected by Professor Trash Wheel: 190.12
+tons
+
+The total number of sports balls collected by Mr. Trash Wheel in 2020:
+856 sports balls
+
+# Problem 3
