--- a/p8105_hw2_maf2311.md
+++ b/p8105_hw2_maf2311.md
@@ -95,3 +95,90 @@ The total number of sports balls collected by Mr. Trash Wheel in 2020:
 856 sports balls
 
 # Problem 3
+
+``` r
+pols_month = 
+  read_csv(file = "./fivethirtyeight_datasets/pols-month.csv") %>%
+  separate(col=mon, into=c('year', 'month', 'day'), sep='-') %>%
+  mutate(month = month.abb[as.numeric(month)]) %>%
+  mutate(president = ifelse(prez_gop == 0, "dem", "gop")) %>%
+  select(-day, -prez_gop, -prez_dem)
+```
+
+    ## Rows: 822 Columns: 9
+    ## ── Column specification ────────────────────────────────────────────────────────
+    ## Delimiter: ","
+    ## dbl  (8): prez_gop, gov_gop, sen_gop, rep_gop, prez_dem, gov_dem, sen_dem, r...
+    ## date (1): mon
+    ## 
+    ## ℹ Use `spec()` to retrieve the full column specification for this data.
+    ## ℹ Specify the column types or set `show_col_types = FALSE` to quiet this message.
+
+``` r
+snp = 
+  read_csv(file = "./fivethirtyeight_datasets/snp.csv") %>%
+  separate(col=date, into=c('month', 'day', 'year'), sep='/') %>%
+  mutate(month = month.abb[as.numeric(month)]) %>%
+  mutate(year = ifelse(year<23, paste("20",year, sep = ""), paste("19",year, sep = ""))) %>%
+  select(year, month, close, -day)
+```
+
+    ## Rows: 787 Columns: 2
+    ## ── Column specification ────────────────────────────────────────────────────────
+    ## Delimiter: ","
+    ## chr (1): date
+    ## dbl (1): close
+    ## 
+    ## ℹ Use `spec()` to retrieve the full column specification for this data.
+    ## ℹ Specify the column types or set `show_col_types = FALSE` to quiet this message.
+
+``` r
+unemp = 
+  read_csv(file = "./fivethirtyeight_datasets/unemployment.csv") %>%
+  rename(year = Year) %>%
+  pivot_longer(
+    Jan:Dec,
+    names_to = "month", 
+    values_to = "percent")
+```
+
+    ## Rows: 68 Columns: 13
+    ## ── Column specification ────────────────────────────────────────────────────────
+    ## Delimiter: ","
+    ## dbl (13): Year, Jan, Feb, Mar, Apr, May, Jun, Jul, Aug, Sep, Oct, Nov, Dec
+    ## 
+    ## ℹ Use `spec()` to retrieve the full column specification for this data.
+    ## ℹ Specify the column types or set `show_col_types = FALSE` to quiet this message.
+
+``` r
+result = 
+  full_join(pols_month, snp, by = c("year", "month")) %>%
+  mutate(year = as.numeric(year))
+
+final = full_join(result, unemp, by = c("year", "month"))
+```
+
+### Pols_month Dataset
+
+This dataset contained information on the political breakdown of the
+United States Government from 1947 to 2015. It had 822 rows and 9
+columns, and the variables included: year, month, gov_gop, sen_gop,
+rep_gop, gov_dem, sen_dem, rep_dem, president
+
+### SNP Dataset
+
+This dataset contained information on monthly closing values of the
+Standard & Poor’s stock market index (S&P) from 1950 to 2015. It had 787
+rows and 3 columns, and the variables included: year, month, close
+
+### Unemployment Dataset
+
+This dataset contained information on monthly unemployment rates (as
+percentages) from 1948 to 2015. It had 816 rows and 3 columns, and the
+variables included: year, month, percent
+
+### Final Dataset
+
+This dataset contains all information from the 3 datasets mentioned
+above, from 1947 to 2015. The data entries are joined by the ‘year’ and
+‘month’ variables, and there are 11 columns and 828 rows.
